java_binary(
    name = "LeaderBoard",
    srcs = ["LeaderBoard.java"],
    deps = [
        "//src/com/bugval/domain",
        "//src/com/bugval/infra",
        "//src/com/bugval/operations",
        "//src/com/bugval/services",
        "//src/com/bugval/util",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "//thirdparty:dagger",
    ],
)